--- a/client/src/components/Projects/projects.css
+++ b/client/src/components/Projects/projects.css
@@ -1,3 +1,6 @@
+@font-face {font-family: sftg; src: url(sftg.ttf)}
+@font-face {font-family: ck; src: url(ck.ttf)}
+
 .projectDisplay {
     overflow: hidden;
     background: #fff;
@@ -18,26 +21,18 @@
     justify-content: center
 }
 .projectDisplay > .col-sm-5:hover > span {filter: blur(0)}
-.projectDisplay > .col-sm-5 > span {
-    position: absolute;
-    top:-1px;
-    left: -1px;
-    width: 100%;
-    filter:blur(5px);
-    transition: opacity 300ms;
-    z-index: 0
-}
+.projectDisplay > .col-sm-5 > span {transition: opacity 300ms; z-index: 0; filter: blur(5px)}
 .projectDisplay > .col-sm-5:hover > img {opacity: 0}
 .projectDisplay > .col-sm-5 > img {  
-    border: solid #ccc 1px;
-    
-    box-shadow: -1px 1px 15px #000;
+    position: absolute;
+    top: 10px;
     transition: opacity 1000ms;
-    z-index: 2
+    z-index: 1;
+    width: 350px;
 }
 .projectDisplay > .col-sm-5 > .curve > .links {
     position: absolute;
-    left: -30px;
+    left: -33px;
     width: auto;
     transform: rotate(90deg);
     z-index: 3
@@ -56,7 +51,7 @@
     justify-content: center
 }
 
-.far {padding: 0; color: rgb(126, 126, 126); font-size: 18px;  }
+.far {padding: 0; color: rgb(126, 126, 126); font-size: 18px}
 .fa-circle{color: #ccc; cursor: pointer}
 
 .projectDisplay > .col-sm-7 {padding:10px;  height: 250px; display: flex; align-items: center; justify-content: center}
@@ -73,3 +68,6 @@
     .projectDisplay > .col-sm-5 > .curve {right: auto; bottom: -115px; left: auto; height: 150px; width: 120%}
     .projectDisplay > .col-sm-5 > .curve > .links {top: 10px;left: auto; transform: rotate(0deg)}
 }
+
+.sftg {font-family: sftg; font-size: 50px}
+.codeKeeper {font-family: ck}
